--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "test": "mocha"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "^2.2.5"
+  }
 }
